tests/NormalTests/paczka2/big_fuzzy/41302896.err
Error in line 3: jNHRaJPns0 A941 49,4
Error in line 1: 1HTbb5 A863 0,8
Error in line 12: A863 S721 1(1,1
Error in line 4: A863 S721 21,6
Error in line 30: 1EubS A863 23,3
Error in line 39: 1FN= A941 234,0
Error in line 37: jNHRaJPns0 A941 68,6
Error in line 43: 1HTbb5 S721 65,4
Error in line 40: jNHRaJPns0 S91 57,2
Error in line 44: 1HTbb5 A941 21,2
Error in line 46: 1HTbb5 S721 34,3
Error in line 48: 1HTbb5 A863 74,6
Error in line 57: 1EubS A863 97,3
Error in line 55: 1FNU A941 7,1
Error in line 62: 1FNU S721 1,6
Error in line 67: 1EubS A941 -4,8
Error in line 54: A863 A863 21,3
Error in line 58: 1EubS A941 64,7
Error in line 71: 1EubS S91 62,2
Error in line 84: 1I0if0e5IM S91 3,4
Error in line 89: A863 S91 09,1
Error in line 86: 1I0if0e5IM A863 98,2
Error in line 93: A863 S91 0,1
Error in line 107: 1I0if0e5IM A863 47,02
Error in line 108: 1EubS A941 6,7
Error in line 113: 1HTbb5 A941 8,0
Error in line 103: jNHRaJPns0 S721 111,9
Error in line 120: A863 A863 37,3
Error in line 123: 1HTbb5 A863 14,4
Error in line 121: jNHRaJPns0 S91 26,1
Error in line 130: jNHRaJPns0 A941 82,7
Error in line 136: 1HTbb5 AK41 45,3
Error in line 128: 1I0if0e5IM A863 80,0
Error in line 143: 1I0if0e5IM A941 16,7
Error in line 151: 1FNU A941 213,2
Error in line 141: 1HTbb5 A941 14,4
Error in line 149: 1I0if0e5IM A863 18,7
Error in line 160: 1FNU S91 15,4
Error in line 166: 1EubSS72137,5
Error in line 153: 1HTbb5 S91 52,8
Error in line 150: jNHRaJPns0 A941 28,1
Error in line 169: 1I0if0e5IM A941 21,6
Error in line 202: jNHRaJPns0 A863 41,6
Error in line 222: jNHRaJPns0 S721 44,1
Error in line 207: 1HTbb5 A941 90,6
Error in line 230: 1HTbb5 S721 70,9
Error in line 228: 1FNU S91 32,8
Error in line 226: 1I0if0e5IM S91 27,2
Error in line 227: 1EubS A863 77,1
Error in line 241: 1HTbb5 S721 61,5
Error in line 221: A863 S721 62,8
